--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "meta-transactions/lib/forge-std"]
 	path = meta-transactions/lib/forge-std
 	url = https://github.com/foundry-rs/forge-std
+[submodule "meta-transactions/lib/openzeppelin-contracts"]
+	path = meta-transactions/lib/openzeppelin-contracts
+	url = https://github.com/openzeppelin/openzeppelin-contracts
